# social-agents

./: .gitignore  README.md  main.py  pyproject.toml  stream_agent.db
api/: docker-compose.yml  main.py  run.py  setup.py
cli/: url_to_md.py
common/: llm_provider_setup.py  schemas.py  utils.py
parser_agents/reddit/: agent.py  tools.py
parser_agents/x/: schemas.py
stream_agent/: README.md  main.py
stream_agent/api/: README.md  alembic.ini  auth.py  database.py  init_db.py  main.py  models.py  response_models.py  run.py  schemas.py
stream_agent/common/: partials.py  writers.py
stream_agent/diagrams/: 2025-06-17-social-agent.excalidraw
stream_agent/parser_agents/reddit/: agent.py  tools.py
stream_agent/parser_agents/x/: agent.py  tools.py
stream_agent/ui/: package.json  pnpm-lock.yaml  tailwind.config.ts
stream_agent/ui/app/: globals.css  layout.tsx
stream_agent/ui/components/: main-dashboard.tsx
ui/app/: page.tsx
ui/components/: sidebar.tsx
utils/: reddit.py
