[project]
name = "stream-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "arcadepy",
    "python-dotenv",
    "langchain",
    "langchain-core",
    "langchain-openai",
    "langchain-anthropic",
]

[project.scripts]
api = "stream_agent.api.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"